[bumpversion]
current_version = 0.8.9
commit = True
tag = True

[metadata]
name = openomics
version = 0.8.9
author = Jonny Tran
description = OpenOmics provides a bioinformatics API and web-app platform integrate and visualize the multiomics and clinical data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JonnyTran/OpenOmics
keywords = sample, example, setuptools
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = openomics, openomics_web
package_dir =
    openomics = openomics
    openomics_web = openomics_web
test_suite = tests
python_requires = >=3.6, <4
setup_requires =
    pytest-runner
    twine
install_requires = file: requirements.txt

[options.extras_require]
test = file: requirements_dev.txt

[options.package_data]
sample =
    tests/data/*

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:openomics/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
per-file-ignores = openomics/imageomics.py:F821

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
